--- a/scss/_theme.clean.scss
+++ b/scss/_theme.clean.scss
@@ -61,18 +61,27 @@ body {
 
 .wrapper {
     display: grid;
+    display: -ms-grid;
     grid-template-rows: auto auto auto;
+    -ms-grid-rows: auto auto auto;
     grid-gap: .5em;
     main {
         display: grid;
+        display: -ms-grid;
         grid-template-columns: 1fr;
+        -ms-grid-columns: 1fr;
+        -ms-grid-row: 2;
+        grid-row: 2;
         @include breakpoint-up(lg) {
+            -ms-grid-columns: 1fr repeat(2, minmax(auto, 10em)) 1fr;
             grid-template-columns: 1fr repeat(2, minmax(auto, 10em)) 1fr;
         }
         .main {
             grid-column: initial;
+            -ms-grid-column: initial;
             @include breakpoint-up(lg) {
                 grid-column: 1/4;
+                -ms-grid-column-span: 4;
             }
         }
     }
